Fix intel gptj docker run
Former-commit-id: f730414ca6d65e9a4698202218f555702ce2227f

--- a/cm-mlops/script/app-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-intel/_cm.yaml
@@ -262,6 +262,10 @@ variations:
     env:
       CM_BENCHMARK: STANDALONE_GPTJ
 
+  gptj_,build-harness:
+    docker:
+      run: false
+
   gptj_,pytorch:
     adr:
       conda-package:
