Fix docker run skip with variations
Former-commit-id: 3ce9f1e6163aff1d833e5c3597ca859fbe8443ca

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -328,6 +328,15 @@ variations:
     env:
       CM_MLPERF_IMPLEMENTATION: intel
 
+  intel-original,gptj_:
+    docker:
+      deps:
+      - tags: get,ml-model,gptj
+
+  intel-original,gptj_,build-harness:
+    docker:
+      run: false
+
   qualcomm:
     alias: kilt
 
