--- a/cm-mlops/script/app-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-intel/_cm.yaml
@@ -266,6 +266,17 @@ variations:
     docker:
       run: false
 
+  int4,gptj_,build-harness:
+    deps:
+      - tags: reproduce,mlperf,inference,intel,harness,_calibration
+        inherit_variation_tags: true
+        names:
+          - calibration
+        skip_inherit_variation_groups:
+          - run-mode
+          - device-info
+        force_cache: true
+
   gptj_,pytorch:
     adr:
       conda-package:
@@ -323,6 +334,14 @@ variations:
         names:
           - pip-package
           - accelerate
+      - tags: get,generic-python-lib,_custom-python,_package.torch,_url.git+https://github.com/pytorch/pytorch.git@927dc662386af052018212c7d01309a506fc94cd
+        env:
+          CM_PYTHON_BIN_WITH_PATH: "<<<CM_CONDA_BIN_PATH>>>/python3"
+          "+ CXXFLAGS":
+            - "-Wno-nonnull"
+            - "-Wno-maybe-uninitialized"
+            - "-Wno-uninitialized"
+            - "-Wno-free-nonheap-object"
 
   gptj-99:
     group: model
@@ -400,6 +419,20 @@ variations:
       - CM_MLPERF_INFERENCE_INTEL_HARNESS_PATH
       - CM_ML_MODEL_*
       - DATA_PATH
+
+  calibration:
+    group: run-mode
+    env:
+      CM_LOCAL_MLPERF_INFERENCE_INTEL_RUN_MODE: calibration
+    new_env_keys:
+      - CM_ML_MODEL_*
+
+  calibration,gptj_:
+    deps:
+      - tags: get,generic-python-lib,_package.texttable1
+        names:
+          - pip-package
+          - texttable
 
   build-harness,bert_:
     deps:
