UFix docker_rel_run for mlperf implementations

--- a/cm-mlops/script/app-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-nvidia/_cm.yaml
@@ -1459,3 +1459,6 @@ variations:
   a100,sxm,dlrm_,offline,run_harness:
     default_variations:
       batch-size: batch_size.1400
+
+docker:
+  docker_real_run: False
