Fixes for intel gptj int4 calibration
Former-commit-id: b7715a917e1c5888656fd393c06fba88791cb6b5

--- a/cm-mlops/script/app-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-intel/_cm.yaml
@@ -429,15 +429,7 @@ variations:
       - INT4_CALIBRATION_DIR
 
   calibration,gptj_:
-    deps:
-      - tags: get,generic-python-lib,_package.texttable
-        names:
-          - pip-package
-          - texttable
-      - tags: get,generic-python-lib,_package.transformers
-        names:
-          - pip-package
-        version: "4.21.2"
+    deps: []
 
   build-harness,bert_:
     deps:
