--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -90,6 +90,7 @@ input_mapping:
   test_query_count: CM_TEST_QUERY_COUNT
   threads: CM_NUM_THREADS
   batch_size: CM_MLPERF_LOADGEN_MAX_BATCHSIZE
+  sut: CM_MLPERF_INFERENCE_SUT_VARIATION
 
 new_state_keys:
 - app_mlperf_inference_*
