--- a/cm-mlops/script/import-mlperf-inference-to-experiment/_cm.yaml
+++ b/cm-mlops/script/import-mlperf-inference-to-experiment/_cm.yaml
@@ -21,6 +21,7 @@ tags:
 
 input_mapping:
   target_repo: CM_IMPORT_MLPERF_INFERENCE_TARGET_REPO
+  submitter: CM_MLPERF_SUBMITTER
 
 # Dependencies on other CM scripts
 deps:
