--- a/cm-mlops/cfg/benchmark-hardware-compute/nvidia-gpu-jetson-orin.yaml
+++ b/cm-mlops/cfg/benchmark-hardware-compute/nvidia-gpu-jetson-orin.yaml
@@ -2,6 +2,6 @@ uid: fe379ecd1e054a00
 
 tags: gpu,nvidia,jetson,orin
 
-name: "Nvidia GPU - Jetson Orin"
+name: "Nvidia - GPU - Jetson Orin"
 
 mlperf_inference_device: cuda
