--- a/cm-mlops/challenge/automate-mlperf-inference-v3.1-and-v4.0-2024/_cm.yaml
+++ b/cm-mlops/challenge/automate-mlperf-inference-v3.1-and-v4.0-2024/_cm.yaml
@@ -7,6 +7,7 @@ automation_uid: 3d84abd768f34e08
 title: Add MLCommons CM workflows and unifed interface to automate MLPerf inference v3.1 and v4.0 benchmarks (Intel, Nvidia, Qualcomm, Arm64, TPU ...)
 
 date_open: '20231215'
+date_close: '20240315'
 
 hot: true
 
