added support to pass cfg dict from cmd to pytorch loadgen
Former-commit-id: 7128589c9801569cfb58a8f35e4b10985926a871

--- a/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
+++ b/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
@@ -31,6 +31,7 @@ input_mapping:
   modelpath: CM_ML_MODEL_FILE_WITH_PATH
   modelcodepath: CM_ML_MODEL_CODE_WITH_PATH
   modelcfgpath: CM_ML_MODEL_CFG_WITH_PATH
+  modelcfg: CM_ML_MODEL_CFG
   modelsamplepath: CM_ML_MODEL_SAMPLE_WITH_PATH
   output_dir: CM_MLPERF_OUTPUT_DIR
   scenario: CM_MLPERF_LOADGEN_SCENARIO
