removed large files to keep this repository small before moving it to a separate repo
Former-commit-id: 7b435d13cecaa8b668fdae9e0a02e7e0250a6053

--- a/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
+++ b/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
@@ -257,7 +257,7 @@ input_description:
   modelpath: 
     desc: Full path to file with model weights
   modelcodepath: 
-    desc: (for PyTorch models) Full path to file with model code and cm.py
+    desc: (for PyTorch models) Full path to file with model code and cmc.py
   modelcfgpath: 
     desc: (for PyTorch models) Full path to JSON file with model cfg
   modelsamplepath: 
