updated universal python loadgen harness and improved get generic python lib
Former-commit-id: ac5936e67ad9b34358346926b669d6c330f186c1

--- a/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
+++ b/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
@@ -252,6 +252,17 @@ variations:
       CM_ML_MODEL_STUB: "#"
 
 
+  cmc:
+    env:
+      CM_CUSTOM_MODEL_CMC: yes
+
+
+  custom,cmc:
+    deps:
+    - tags: get,ml-model,cmc
+    names:
+    - cmc-model
+
 
 input_description:
   modelpath: 
