--- a/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
+++ b/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
@@ -67,6 +67,8 @@ deps:
 
 variations:
   cuda:
+    docker:
+      all_gpus: 'yes'
     group: target
     env:
       USE_CUDA: yes
@@ -101,7 +103,6 @@ input_description:
 
 docker:
   skip_run_cmd: 'no'
-  all_gpus: 'yes'
   input_paths:
     - input
     - env.CM_IMAGE
