added test deps conditions (enable_if_env, enable_if_any_env, skip_if_env, skip_if_any_env)

--- a/script/print-hello-world/_cm.yaml
+++ b/script/print-hello-world/_cm.yaml
@@ -36,6 +36,10 @@ variations:
     env:
       CM_PRINT_HELLO_WORLD_TEXT: "#"
 
+  skip_print_env:
+    env:
+      CM_PRINT_HELLO_WORLD_SKIP_PRINT_ENV: 'yes'
+ 
 docker:
   skip_run_cmd: 'yes'
   skip_cm_sys_upgrade: 'yes'
