--- a/script/app-image-classification-onnx-py/_cm.yaml
+++ b/script/app-image-classification-onnx-py/_cm.yaml
@@ -41,9 +41,7 @@ deps:
     USE_CUDA:
     - yes
 
-- tags: get,dataset,imagenet,image-classification,original
-  docker:
-    run: True
+- tags: get,dataset,imagenet,image-classification,original,_run-during-docker-build
 
 - tags: get,dataset-aux,imagenet-aux,image-classification
 - tags: get,ml-model,resnet50,_onnx,image-classification
