--- a/script/app-image-classification-onnx-py/_cm.yaml
+++ b/script/app-image-classification-onnx-py/_cm.yaml
@@ -104,6 +104,10 @@ input_description:
 
 docker:
   skip_run_cmd: 'no'
+  skip_cm_sys_upgrade: 'yes'
+  cm_repo_flags: '--checkout=dev'
+  use_host_group_id: 'yes'
+  image_tag_extra: '-cm-dev'
   input_paths:
     - input
     - env.CM_IMAGE
