--- a/script/get-cuda-devices/_cm.yaml
+++ b/script/get-cuda-devices/_cm.yaml
@@ -24,6 +24,7 @@ deps:
 
 docker:
   run: false
+  all_gpus: 'yes'
   skip_run_cmd: 'no'
   skip_cm_sys_upgrade: 'yes'
   cm_repo_flags: '--checkout=dev'
