trying to fix tests for mlcommons@cm4mlops

--- a/.github/workflows/update-script-readme.yml
+++ b/.github/workflows/update-script-readme.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ "master", "dev" ]
     paths:
-      - 'cm-mlops/script/**_cm.json'
+      - 'script/**_cm.json'
 
 jobs:
   doreadme:
