--- a/.github/workflows/test-cm-script-features.yml
+++ b/.github/workflows/test-cm-script-features.yml
@@ -5,7 +5,7 @@ name: CM script automation features test
 
 on:
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
     paths:
       - '.github/workflows/test-cm-script-features.yml'
       - '**'
