--- a/.github/workflows/test-cm-tutorial-tvm-pip.yml
+++ b/.github/workflows/test-cm-tutorial-tvm-pip.yml
@@ -5,7 +5,7 @@ name: CM tutorial tvm pip install
 
 on:
   pull_request:
-    branches: [ "master", "test" ]
+    branches: [ "main", "test" ]
     paths:
       - '.github/workflows/test-cm-tutorial-tvm-pip.yml'
       - '**'
