--- a/.github/workflows/test-image-classification-onnx.yml
+++ b/.github/workflows/test-image-classification-onnx.yml
@@ -5,7 +5,7 @@ name: image classification with ONNX
 
 on:
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
     paths:
       - '.github/workflows/test-image-classification-onnx.yml'
       - '**'
