--- a/.github/workflows/test-mlperf-inference-gptj.yml
+++ b/.github/workflows/test-mlperf-inference-gptj.yml
@@ -5,7 +5,7 @@ name: MLPerf inference GPT-J
 
 on:
   pull_request:
-    branches: [ "master1", "dev1" ]
+    branches: [ "main1", "dev1" ]
     paths:
       - '.github/workflows/test-mlperf-inference-gptj.yml'
       - '**'
