--- a/.github/workflows/test-mlperf-inference-mlcommons-cpp-resnet50.yml
+++ b/.github/workflows/test-mlperf-inference-mlcommons-cpp-resnet50.yml
@@ -5,7 +5,7 @@ name: MLPerf inference MLCommons C++ ResNet50
 
 on:
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
     paths:
       - '.github/workflows/test-mlperf-inference-mlcommons-cpp-resnet50.yml'
       - '**'
