--- a/.github/workflows/test-mlperf-inference-rnnt.yml
+++ b/.github/workflows/test-mlperf-inference-rnnt.yml
@@ -5,7 +5,7 @@ name: MLPerf inference rnnt
 
 on:
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
     paths:
       - '.github/workflows/test-mlperf-inference-rnnt.yml'
       - '**'
