--- a/.github/workflows/update-script-readme.yml
+++ b/.github/workflows/update-script-readme.yml
@@ -3,9 +3,10 @@ name: Readme update for CM scripts
 
 on:
   push:
-    branches: [ "master", "dev" ]
+    branches: [ "main", "dev" ]
     paths:
       - 'script/**_cm.json'
+      - 'script/**_cm.yaml'
 
 jobs:
   doreadme:
